--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>My Site Axit</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar_img">
-            <img src="./assets/images/Logo1.1.png" alt="Должно быть лого">
-        </div>
-        <div class="navbar_title">
-            <div class="navbar_title_1">Features</div>
-            <div class="navbar_title_2">About</div>
-            <div class="navbar_title_3">Pricing</div>
-            <div class="navbar_title_4">Reviews</div>
-            <div class="navbar_title_6">Contact</div>
+    <div class="bodys">
+        <div class="navbar">
+            <div class="navbar_img">
+                <img src="./assets/images/Logo1.1.png" alt="Должно быть лого">
+            </div>
+            <div class="navbar_title">
+                <div class="navbar_title_1">Features</div>
+                <div class="navbar_title_2">About</div>
+                <div class="navbar_title_3">Pricing</div>
+                <div class="navbar_title_4">Reviews</div>
+                <div class="navbar_title_6">Contact</div>
+            </div>
         </div>
     </div>
 </body>
