--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                 <img src="./assets/images/Logo1.1.png" alt="Должно быть лого">
             </div>
             <div class="navbar_title">
-                <div class="navbar_title_1">Features</div>
-                <div class="navbar_title_2">About</div>
-                <div class="navbar_title_3">Pricing</div>
-                <div class="navbar_title_4">Reviews</div>
-                <div class="navbar_title_6">Contact</div>
+                <div class="navbar_title_1" style="margin-right: 44px;"><a href="#Features">Features</a></div>
+                <div class="navbar_title_2" style="margin-right: 45px;"><a href="#About">About</a></div>
+                <div class="navbar_title_3" style="margin-right: 47px;"><a href="#Pricing">Pricing</a></div>
+                <div class="navbar_title_4" style="margin-right: 45px;"><a href="#Reviews">Reviews</a></div>
+                <div class="navbar_title_6" style="margin-right: 147px;"><a href="#Contact">Contact</a></div>
             </div>
         </div>
     </div>
