добавил второй блок в сайт (фон, правый левый блок, кнопки загрузит войти, поле набора логина и пороля)

--- a/index.html
+++ b/index.html
@@ -4,20 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700;800&family=Raleway&display=swap" rel="stylesheet">
     <title>My Site Axit</title>
 </head>
 <body>
     <div class="bodys">
-        <div class="navbar">
+        <div class="navbar"> <!-- навбар, черная полоска сверху -->
             <div class="navbar_img">
                 <img src="./assets/images/Logo1.1.png" alt="Должно быть лого">
             </div>
             <div class="navbar_title">
-                <div class="navbar_title_1" style="margin-right: 44px;"><a href="#Features">Features</a></div>
-                <div class="navbar_title_2" style="margin-right: 45px;"><a href="#About">About</a></div>
-                <div class="navbar_title_3" style="margin-right: 47px;"><a href="#Pricing">Pricing</a></div>
-                <div class="navbar_title_4" style="margin-right: 45px;"><a href="#Reviews">Reviews</a></div>
-                <div class="navbar_title_6" style="margin-right: 147px;"><a href="#Contact">Contact</a></div>
+                <nav class="navbar_title_1" style="margin-right: 44px;"><a href="#Features">Features</a></nav>
+                <nav class="navbar_title_2" style="margin-right: 45px;"><a href="#About">About</a></nav>
+                <nav class="navbar_title_3" style="margin-right: 47px;"><a href="#Pricing">Pricing</a></nav>
+                <nav class="navbar_title_4" style="margin-right: 45px;"><a href="#Reviews">Reviews</a></nav>
+                <nav class="navbar_title_6" style="margin-right: 147px;"><a href="#Contact">Contact</a></nav>
+            </div>
+        </div>
+        <div class="header">
+            <div class="header_block one">
+                <div class="header_img_fon">
+                    <img src="./assets/images/Logo_header.png" alt="большое лого">
+                </div>
+                <div class="header_title">
+                    MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
+                </div>
+                <div class="header_divider">
+                    <img src="/assets/images/divider_white_u72.png"> 
+                </div>
+                <div class="header_text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                    euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                    accumsan et viverra justo commodo. 
+                </div>
+                <button class="button_download">
+                    Download
+                </button>
+            </div>
+            <div class="header_block two">
+                <div class="signap">
+                    <div class="signap_title">
+                        Try Your <span class="singnap free">FREE</span> Trial Today
+                    </div>
+                    <div class="signap_input">
+                        <input type="text" class="signap_input_name" placeholder="Name">
+                        <input type="text" class="signap_input_email" placeholder="Email">
+                        <input type="text" class="signap_input_password" placeholder="Password">
+                    </div>
+                    <button class="button_starter">
+                        Get Started
+                    </button>
+                </div>
             </div>
         </div>
     </div>
