оформил кнопку в signap

--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
                 </div>
             </div>
         </div>
+        <div class="brand_bar">brand</div>
+        <div class="features">features</div>
+        <div class="our_process">our</div>
+        <div class="pricing">pricing</div>
+        <div class="testimonials">testimonials</div>
+        <div class="custom_section">custom</div>
+        <div class="contact_us">contact</div>
+        <div class="footer">footer</div>
     </div>
 </body>
 </html>
