--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
                 </div>
                 <div class="header_divider">
-                    <img src="/assets/images/divider_white_u72.png"> 
+                    <img src="./assets/images/divider_white_u72.png"> 
                 </div>
                 <div class="header_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
