добавил третьий  блок Brand

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <img src="./assets/images/Logo1.1.png" alt="Должно быть лого">
             </div>
             <div class="navbar_title">
-                <nav class="navbar_title_1" style="margin-right: 44px;"><a href="#Features">Features</a></nav>
-                <nav class="navbar_title_2" style="margin-right: 45px;"><a href="#About">About</a></nav>
-                <nav class="navbar_title_3" style="margin-right: 47px;"><a href="#Pricing">Pricing</a></nav>
-                <nav class="navbar_title_4" style="margin-right: 45px;"><a href="#Reviews">Reviews</a></nav>
+                <nav class="navbar_title_1" style="margin-right: 46px;"><a href="#Features">Features</a></nav>
+                <nav class="navbar_title_2" style="margin-right: 48px;"><a href="#About">About</a></nav>
+                <nav class="navbar_title_3" style="margin-right: 48px;"><a href="#Pricing">Pricing</a></nav>
+                <nav class="navbar_title_4" style="margin-right: 48px;"><a href="#Reviews">Reviews</a></nav>
                 <nav class="navbar_title_6" style="margin-right: 147px;"><a href="#Contact">Contact</a></nav>
             </div>
         </div>
@@ -42,27 +42,40 @@
                     euismod bibendum laoreet. Proin gravida dolor sit amet lacus
                     accumsan et viverra justo commodo. 
                 </div>
-                <button class="button_download">
-                    Download
-                </button>
+                <form action="#">
+                    <button type="button" class="button_download">Download</button>
+                </form>
             </div>
             <div class="header_block two">
                 <div class="signap">
                     <div class="signap_title">
                         Try Your <span class="singnap free">FREE</span> Trial Today
                     </div>
-                    <div class="signap_input">
-                        <input type="text" class="signap_input_name" placeholder="Name">
-                        <input type="text" class="signap_input_email" placeholder="Email">
-                        <input type="text" class="signap_input_password" placeholder="Password">
-                    </div>
-                    <button class="button_starter">
-                        Get Started
-                    </button>
+                        <form action="#">
+                            <div class="signap_input">
+                                <input type="text" class="signap_input_name" placeholder="Name">
+                                <input type="email" class="signap_input_email" placeholder="Email">
+                                <input type="password" class="signap_input_password" placeholder="Password">
+                            </div>
+                            <input type="submit" class="button_starter" value="Get Started"/>
+                        </form> 
                 </div>
             </div>
         </div>
-        <div class="brand_bar">brand</div>
+        <div class="brand_bar" style="background-color: #ffffff;">
+            <div class="brand_box1">
+                <h2>Social Media</h2>
+                <div class="brand_box_text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Aenean euismod bibendum laoreet.
+                </div>
+            </div>
+            <div class="brand_box2">
+                <div class="">
+                    <img src="/assets/images/Social_Media_Icons.png" alt="icon">
+                </div>
+            </div>
+        </div>
         <div class="features">features</div>
         <div class="our_process">our</div>
         <div class="pricing">pricing</div>
