--- a/index.html
+++ b/index.html
@@ -72,17 +72,19 @@
             </div>
             <div class="brand_box2">
                 <div class="">
-                    <img src="/assets/images/Social_Media_Icons.png" alt="icon">
+                    <img src="./assets/images/Social_Media_Icons.png" alt="icon">
                 </div>
             </div>
         </div>
-        <div class="features">features</div>
-        <div class="our_process">our</div>
-        <div class="pricing">pricing</div>
-        <div class="testimonials">testimonials</div>
-        <div class="custom_section">custom</div>
-        <div class="contact_us">contact</div>
-        <div class="footer">footer</div>
+        <div class="display">
+            <div class="features">features</div>
+            <div class="our_process">our</div>
+            <div class="pricing">pricing</div>
+            <div class="testimonials">testimonials</div>
+            <div class="custom_section">custom</div>
+            <div class="contact_us">contact</div>
+            <div class="footer">footer</div>
+        </div>
     </div>
 </body>
 </html>
