--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navbar_img">
                 <img src="./assets/images/Logo1.1.png" alt="Должно быть лого">
             </div>
-            <div class="navbar_title">
+            <div class="navbar_title">      <!-- меню сайта -->
                 <nav class="navbar_title_1" style="margin-right: 46px;"><a href="#Features">Features</a></nav>
                 <nav class="navbar_title_2" style="margin-right: 48px;"><a href="#About">About</a></nav>
                 <nav class="navbar_title_3" style="margin-right: 48px;"><a href="#Pricing">Pricing</a></nav>
@@ -26,7 +26,7 @@
                 <nav class="navbar_title_6" style="margin-right: 147px;"><a href="#Contact">Contact</a></nav>
             </div>
         </div>
-        <div class="header">
+        <div class="header">                <!-- второй блок с текстом и кнопкой скачать и блоком ввода данных -->
             <div class="header_block one">
                 <div class="header_img_fon">
                     <img src="./assets/images/Logo_header.png" alt="большое лого">
@@ -47,7 +47,7 @@
                 </form>
             </div>
             <div class="header_block two">
-                <div class="signap">
+                <div class="signap">                <!-- блок с сингапом для ввода данных -->
                     <div class="signap_title">
                         Try Your <span class="singnap free">FREE</span> Trial Today
                     </div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="brand_bar" style="background-color: #ffffff;">
+        <div class="brand_bar" style="background-color: #ffffff;"> <!-- третьи блок соцсетей -->
             <div class="brand_box1">
                 <h2>Social Media</h2>
                 <div class="brand_box_text">
@@ -72,19 +72,17 @@
             </div>
             <div class="brand_box2">
                 <div class="">
-                    <img src="./assets/images/Social_Media_Icons.png" alt="icon">
+                    <img src="./assets/images/Social_Media_Icons.png" alt="icon"> <!-- добавил точку перед папкой -->
                 </div>
             </div>
         </div>
-        <div class="display">
-            <div class="features">features</div>
-            <div class="our_process">our</div>
-            <div class="pricing">pricing</div>
-            <div class="testimonials">testimonials</div>
-            <div class="custom_section">custom</div>
-            <div class="contact_us">contact</div>
-            <div class="footer">footer</div>
-        </div>
+        <div class="features">features</div>
+        <div class="our_process">our</div>
+        <div class="pricing">pricing</div>
+        <div class="testimonials">testimonials</div>
+        <div class="custom_section">custom</div>
+        <div class="contact_us">contact</div>
+        <div class="footer">footer</div>
     </div>
 </body>
 </html>
