доработал блок с социальными стетями

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700;800&family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>My Site Axit</title>
 </head>
 <body>
@@ -71,12 +72,20 @@
                 </div>
             </div>
             <div class="brand_box2">
-                <div class="">
-                    <img src="./assets/images/Social_Media_Icons.png" alt="icon"> <!-- добавил точку перед папкой -->
+                <div class="social_links_element">
+                    <a href="#" class="Social_icon" title="FaceBook"><i class="fa-facebook"></i></a>
+                    <a href="#" class="Social_icon" title="Twitter"><i class="fa-twitter"></i></a>
+                    <a href="#" class="Social_icon" title="Google"><i class="fa-google-plus"></i></a>
+                    <a href="#" class="Social_icon" title="Pinterest"><i class="fa-pinterest"></i></a>
+                    <a href="#" class="Social_icon" title="Instagram"><i class="fa-instagram"></i></a>
+                    <a href="#" class="Social_icon" title="Stumbleupon"><i class="fa-stumbleupon"></i></a>
+                    <a href="#" class="Social_icon" title="Rss"><i class="fa-rss"></i></a>
                 </div>
             </div>
         </div>
-        <div class="features">features</div>
+        <div class="features">
+            
+        </div>
         <div class="our_process">our</div>
         <div class="pricing">pricing</div>
         <div class="testimonials">testimonials</div>
