--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 bibendum laoreet.</p>
                         </div>
                     </div>
-                    <!-- <div class="wrapper_tab_2">
+                   <!-- <div class="wrapper_tab_2">
                         <div class="title">
                             <p>Tabs #2 with soft transitioning effect.<p>
                         </div>
@@ -156,9 +156,204 @@
                 <img src="./assets/images/image_city_feature.png" alt="картинка с городом" style="height: 253px";>
             </div>
         </div>
-        <div class="our_process">our</div>
-        <div class="pricing">pricing</div>
-        <div class="testimonials">testimonials</div>
+        <div class="our_process">
+            <div class="container">
+                <div class="title">
+                    WHY THIS IS AWESOME
+                </div>
+                <div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+                    <hr width="67px" color="#ff8b38">
+                </div>
+                <div class="title_text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <div class="wrapper_box">
+                <div class="container_box">
+                    <div class="our_box">
+                        <div class="circle"><i class="fa fa-lightbulb-o fa-2x" style="color: #ff8b38;" ></i></div>
+                    </div>
+                    <div class="box_title">
+                        <p>Thoughtful Design</p>
+                    </div>
+                    <div class="box_text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                            elit. Aenean euismod bibendum laoreet. Proin gravida 
+                            dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
+                </div>    
+                <div class="container_box">
+                    <div class="our_box">
+                        <div class="circle"><i class="fa fa-keyboard-o fa-2x" style="color: #ff8b38;" ></i></div>
+                    </div>
+                    <div class="box_title">
+                        <p>Well Crafted</p>
+                    </div>
+                    <div class="box_text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                            elit. Aenean euismod bibendum laoreet. Proin gravida 
+                            dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
+                </div>
+                <div class="container_box">
+                    <div class="our_box">
+                        <div class="circle"><i class="fa fa-bolt fa-2x" style="color: #ff8b38;" ></i></div>
+                    </div>
+                    <div class="box_title">
+                        <p>Easy to Customize</p>
+                    </div>
+                    <div class="box_text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                            elit. Aenean euismod bibendum laoreet. Proin gravida 
+                            dolor sit amet lacus accumsan et viverra.</p>
+                    </div>
+                </div>    
+            </div>   
+        </div>
+        <div class="pricing">
+            <div class="container">
+                <div class="title">
+                    PRICING OPTIONS
+                </div>
+                <div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+                    <hr width="67px" color="#ff8b38">
+                </div>
+                <div class="title_text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <div class="wrapper_box">
+                <div class="box one">
+                    <!-- <div class="text_box"> -->
+                        <ul style="list-style-type: none; padding-left: 0px;">
+                            <li class="basic">
+                                Basic
+                            </li>
+                            <li class="price">
+                                <sub style="font-size: 30px;">$</sub>
+                                0 
+                            </li>
+                            <li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
+                                <i>Free for Life</i>
+                            </li>
+                            <li class="texte_gray">1 gb of space</li>
+                            <li class="texte_gray">10 gb of bandwidth</li>
+                            <li class="texte_gray">3 websites</li>
+                            <li class="texte_gray">Basic Customization</li>
+                            <li class="texte_gray">wordpress integration</li>
+                            <li class="texte_gray">email support</li>
+                        </ul>
+                    <!-- </div> -->
+                </div>
+                <div class="box two">
+                    <ul style="list-style-type: none; padding-left: 0px;">
+                        <li class="basic">
+                            Professional
+                        </li>
+                        <li class="price">
+                            <sub style="font-size: 30px;">$</sub>
+                            19
+                        </li>
+                        <li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
+                            <i>Monthly Payment</i>
+                        </li>
+                        <li class="texte_gray">OUR MOST POPULAR</li>
+                        <li class="texte_gray">5 gb of space</li>
+                        <li class="texte_gray">50 gb of bandwidth</li>
+                        <li class="texte_gray">12 websites</li>
+                        <li class="texte_gray">Advanced Customization</li>
+                        <li class="texte_gray">wordpress integration</li>
+                        <li class="texte_gray">email support</li>
+                    </ul>
+                </div>
+                <div class="box three">
+                    <ul style="list-style-type: none; padding-left: 0px;">
+                        <li class="basic">
+                            Enterprise
+                        </li>
+                        <li class="price">
+                            <sub style="font-size: 30px;">$</sub>
+                            70
+                        </li>
+                        <li class="text_comm" style="border-bottom: 5px solid #ff8b38;">
+                            <i>Monthly Payment</i>
+                        </li>
+                        <li class="texte_gray">Unlimited space</li>
+                        <li class="texte_gray">Unlimited bandwidth</li>
+                        <li class="texte_gray">100 websites</li>
+                        <li class="texte_gray">advanced Customization</li>
+                        <li class="texte_gray">wordpress integration</li>
+                        <li class="texte_gray">24/7 customer support</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials">
+            <div class="container">
+                <div class="title">
+                    WHAT OUR CUSTOMERS ARE SAYING
+                </div>
+                <div class="hr" style="padding: 30px 0px 30px; display: flex; justify-content: center;">
+                    <hr width="67px" color="#ff8b38">
+                </div>
+                <div class="title_text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="comment">
+                    <div class="wrapper_comment"><p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit. Doloribus 
+                        accusamus expedita repellat similique 
+                        odio aspernatur ex, architecto eaque 
+                        quo suscipit.<p>
+                    </div>
+                    <div class="photo_fio"> 
+                        <div class="wrapper_photo">
+                            <img src="./assets/images/avatar_2.png" alt="фото пацана">
+                        </div>
+                        <div class="fio">
+                            <div class="name">Jeremy H.</div>
+                            <div class="position">Manager</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="wrapper_comment"><p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit. Doloribus 
+                        accusamus expedita repellat similique 
+                        odio aspernatur ex, architecto eaque 
+                        quo suscipit.<p>
+                    </div>
+                    <div class="photo_fio"> 
+                        <div class="wrapper_photo">
+                            <img src="./assets/images/avatar_2.png" alt="фото пацана">
+                        </div>
+                        <div class="fio">
+                            <div class="name">John S.</div>
+                            <div class="position">Freelancer</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="wrapper_comment"><p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit. Doloribus 
+                        accusamus expedita repellat similique 
+                        odio aspernatur ex, architecto eaque 
+                        quo suscipit.<p>
+                    </div>
+                    <div class="photo_fio"> 
+                        <div class="wrapper_photo">
+                            <img src="./assets/images/avatar_2.png" alt="фото пацана">
+                        </div>
+                        <div class="fio">
+                            <div class="name">Suran W.</div>
+                            <div class="position">Photographer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="custom_section">custom</div>
         <div class="contact_us">contact</div>
         <div class="footer">footer</div>
