добавил седьмой блок Custom

--- a/index.html
+++ b/index.html
@@ -354,7 +354,22 @@
                 </div>
             </div>
         </div>
-        <div class="custom_section">custom</div>
+        <div class="custom_section">   <!-- седьмой блок с фоновой картинкой и кнопкой скачать -->
+            <div class="container">
+                <div class="title">
+                    STYLISH AXURE DESIGN
+                </div>
+                <div class="hr" style="padding: 22px 0px 30px; display: flex; justify-content: center;">
+                    <hr width="67px" color="#ffffff">
+                </div>
+                <div class="title_text">
+                    <p>Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+                </div>
+            </div>
+            <form action="#">
+                <button type="button" class="button_download">Download</button>
+            </form>
+        </div>
         <div class="contact_us">contact</div>
         <div class="footer">footer</div>
     </div>
