предпоследний блок адд

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 			<!-- седьмой блок с фоновой картинкой и кнопкой скачать -->
 			<div class="container">
 				<div class="title">
-					AXURE DESIGN
+					STYLISH AXURE DESIGN
 				</div>
 				<div class="hr" style="padding: 22px 0px 30px; display: flex; justify-content: center;">
 					<hr width="67px" color="#ffffff">
@@ -384,8 +384,39 @@
 				<button type="button" class="button_download">Download</button>
 			</form>
 		</div>
-		<div class="contact_us">contact</div>
-		<div class="footer">footer</div>
+		<div class="contact">
+			<div class="container">
+				<div class="contact__header"></div>
+				<div class="title">
+					CONTACT US
+				</div>
+				<div class="hr" style="padding: 22px 0px 30px; display: flex; justify-content: center;">
+					<hr width="67px" color="orange">
+				</div>
+				<div class="title_text">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+				</div>
+
+				<div class="contact__items">
+					<form class="contact_items-name">
+						<input type="text" class="contact_input_name" placeholder="Name">
+						<input type="email" class="contact_input_email" placeholder="Email">
+						<input type="password" class="contact_input_subject" placeholder="Subject">
+					</form>
+					<div class="contact_items_message">
+						<p>Message</p>
+						<textarea class="comtact__items_comment" name="comment"></textarea></p>
+					</div>
+				</div>
+				<div class="contact__btn">
+					<form action="#">
+						<button type="button" class="button_download_features">Send Message</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer">footer</div>
 	</div>
 </body>
 
