--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			</div>
 			<div class="navbar_title">
 				<!-- меню сайта -->
-				<nav class="navbar_title_1" style="margin-right: 46px;"><a href="#Features">Features</a></nav>
-				<nav class="navbar_title_2" style="margin-right: 48px;"><a href="#About">About</a></nav>
-				<nav class="navbar_title_3" style="margin-right: 48px;"><a href="#Pricing">Pricing</a></nav>
-				<nav class="navbar_title_4" style="margin-right: 48px;"><a href="#Reviews">Reviews</a></nav>
-				<nav class="navbar_title_6" style="margin-right: 147px;"><a href="#Contact">Contact</a></nav>
+				<nav class="navbar_title_1"><a href="#Features">Features</a></nav>
+				<nav class="navbar_title_2"><a href="#About">About</a></nav>
+				<nav class="navbar_title_3"><a href="#Pricing">Pricing</a></nav>
+				<nav class="navbar_title_4"><a href="#Reviews">Reviews</a></nav>
+				<nav class="navbar_title_6"><a href="#Contact">Contact</a></nav>
 			</div>
 		</div>
 		<div class="header">
@@ -405,7 +405,7 @@
 					</form>
 					<div class="contact_items_message">
 						<p>Message</p>
-						<textarea class="comtact__items_comment" name="comment"></textarea></p>
+						<textarea class="contact__items_comment" name="comment"></textarea></p>
 					</div>
 				</div>
 				<div class="contact__btn">
@@ -415,8 +415,26 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="footer">footer</div>
+		<div class="footer">
+			<div class="container">
+				<div class="footer__icon">
+					<div class="social_links_element">
+						<a href="#" class="Social_icon" title="FaceBook"><i class="fa-facebook"></i></a>
+						<a href="#" class="Social_icon" title="Twitter"><i class="fa-twitter"></i></a>
+						<a href="#" class="Social_icon" title="Google"><i class="fa-google-plus"></i></a>
+						<a href="#" class="Social_icon" title="Pinterest"><i class="fa-pinterest"></i></a>
+						<a href="#" class="Social_icon" title="Instagram"><i class="fa-instagram"></i></a>
+						<a href="#" class="Social_icon" title="Stumbleupon"><i class="fa-stumbleupon"></i></a>
+						<a href="#" class="Social_icon" title="Rss"><i class="fa-rss"></i></a>
+					</div>
+				</div>
+				<div class="footer__2015">
+					<p>
+						(C) 2015 Axure Themers
+					</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 
