изменяю маргины для правильньго масштабирования

--- a/index.html
+++ b/index.html
@@ -35,37 +35,39 @@
 	</div>
 	<div class="header">
 		<!-- второй блок с текстом и кнопкой скачать и блоком ввода данных -->
-		<div class="header__block one">
-			<div class="header__block_img_">
-				<img src="./assets/images/Logo_header.png" alt="большое лого">
-			</div>
-			<div class="header__block_title">
-				MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
-			</div>
-			<div class="header__block_divider">
-				<img src="./assets/images/divider_white_u72.png">
-			</div>
-			<div class="header__block_text">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-				euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-				accumsan et viverra justo commodo.
-			</div>
-			<form action="#" class="header__block_btn">
-				<button type="button" class="button_download">Download</button>
-			</form>
-		</div>
-		<div class="header__block two">
-			<div class="header__block_signap">
-				<!-- блок с сингапом для ввода данных -->
-				<div class="header__block_signap_title">
-					Try Your <span class="free">FREE</span> Trial Today
+		<div class="wrappers">
+			<div class="header__block one">
+				<div class="header__block_img_">
+					<img src="./assets/images/Logo_header.png" alt="большое лого">
 				</div>
-				<form action="#" class="header__block_signap_input">
-					<input type="text" class="signap_input_name" placeholder="Name">
-					<input type="email" class="signap_input_email" placeholder="Email">
-					<input type="password" class="signap_input_password" placeholder="Password">
+				<div class="header__block_title">
+					MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
+				</div>
+				<div class="header__block_divider">
+					<img src="./assets/images/divider_white_u72.png">
+				</div>
+				<div class="header__block_text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+					euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+					accumsan et viverra justo commodo.
+				</div>
+				<form action="#" class="header__block_btn">
+					<button type="button" class="button_download">Download</button>
 				</form>
-				<button type="submit" class="header__block_signap_btn" value="Get Started">Get Started</button>
+			</div>
+			<div class="header__block two">
+				<div class="header__block_signap">
+					<!-- блок с сингапом для ввода данных -->
+					<div class="header__block_signap_title">
+						Try Your <span class="free">FREE</span> Trial Today
+					</div>
+					<form action="#" class="header__block_signap_input">
+						<input type="text" class="signap_input_name" placeholder="Name">
+						<input type="email" class="signap_input_email" placeholder="Email">
+						<input type="password" class="signap_input_password" placeholder="Password">
+					</form>
+					<button type="submit" class="header__block_signap_btn" value="Get Started">Get Started</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -296,7 +298,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="testimonials"> <!-- Седьмой блок-->
+	<div class="testimonials">
+		<!-- Седьмой блок-->
 		<div class="container">
 			<div class="title">
 				WHAT OUR CUSTOMERS ARE SAYING
